--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,7 @@
 ---
 abstract: 'Command line application for running MetaTrans plug-ins.'
 author:
+  - 'Jan Pomikalek <xpomikal@fi.muni.cz>'
   - 'Michal Špaček <skim@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
