--- a/META.yml
+++ b/META.yml
@@ -2,14 +2,14 @@
 abstract: 'Command line application for running MetaTrans plug-ins.'
 author:
   - 'Jan Pomikalek <xpomikal@fi.muni.cz>'
-  - 'Michal Špaček <skim@cpan.org>'
+  - 'Michal Spacek <skim@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.08'
+generated_by: 'Module::Install version 1.14'
 license: perl-5
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,4 +24,4 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-MetaTrans-RunTrans
   homepage: https://github.com/tupinek/App-MetaTrans-RunTrans
   repository: git://github.com/tupinek/App-MetaTrans-RunTrans
-version: 1.06
+version: '1.06'
