--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,7 @@ no_index:
     - inc
 requires:
   MetaTrans: 1.06
+  perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-MetaTrans-RunTrans
   homepage: https://github.com/tupinek/App-MetaTrans-RunTrans
